update action and privacy contact

--- a/static/privacy-policy.html
+++ b/static/privacy-policy.html
@@ -19,7 +19,7 @@
         <h3>Data Retention</h3>
         <p>We do not store your personal data on our servers. All data access is transient and used solely for creating playlists.</p>
         <h3>User Rights</h3>
-        <p>Under GDPR, you have the right to access, correct, delete, or restrict the processing of your personal data. If you wish to exercise any of these rights, please contact us at [your contact information].</p>
+        <p>Under GDPR, you have the right to access, correct, delete, or restrict the processing of your personal data. If you wish to exercise any of these rights, please contact us at schwerdtner.max@freenet.de.</p>
         <h3>Data Transfers</h3>
         <p>Our app interacts with Spotify's API, which may involve the transfer of data to Spotify's servers. Please refer to <a href="https://www.spotify.com/us/legal/privacy-policy/" target="_blank">Spotify's Privacy Policy</a> for more information on their data practices.</p>
         <h3>Third-Party Services</h3>
